--- a/QLPhongMachTuWPF/View/Diagnosis.xaml
+++ b/QLPhongMachTuWPF/View/Diagnosis.xaml
@@ -51,19 +51,27 @@
                 <DataGridTextColumn Header="Date" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding NgayKham}"/>
                 <DataGridTextColumn Header="Symtom" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding TrieuChung}" />
                 <DataGridTextColumn Header ="Result" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding KetQua}" />
-                <DataGridTextColumn Header="Status" IsReadOnly="True" CanUserResize="False" Width="1.5*" Binding="{Binding TrangThai}"/>
-
-                <DataGridTemplateColumn Header="Action" IsReadOnly="True" CanUserResize="False" Width="100">
+                <DataGridTemplateColumn Header="Status" Width="1.5*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource gridEditBtn}">
-                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20"/>
-                                </Button>
-                                <Button Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
-                                    <materialDesign:PackIcon Kind="Delete" Width="20" Height="20"/>
-                                </Button>
-                            </StackPanel>
+                            <TextBlock>
+                                <TextBlock.Style>
+                                    <Style TargetType="TextBlock">
+                                        <!-- Giá trị mặc định -->
+                                        <Setter Property="Text" Value="Unknown" />
+                                        <Style.Triggers>
+                                            <!-- Nếu TrangThai = 1 -->
+                                            <DataTrigger Binding="{Binding TrangThai}" Value="1">
+                                                <Setter Property="Text" Value="Printed" />
+                                            </DataTrigger>
+                                            <!-- Nếu TrangThai = 0 -->
+                                            <DataTrigger Binding="{Binding TrangThai}" Value="0">
+                                                <Setter Property="Text" Value="Unprint" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
