update edit patients

--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -16,4 +16,6 @@
     <viewmodel:AddStaffsVM x:Key="AddStaffsVM"></viewmodel:AddStaffsVM>
     <viewmodel:AddDiagnosis x:Key="AddDiagnosis"></viewmodel:AddDiagnosis>
     <viewmodel:AddMedicineVM x:Key="AddMedicineVM"></viewmodel:AddMedicineVM>
+    <viewmodel:ModifyPatientsVM x:Key="ModifyPatientsVM" ></viewmodel:ModifyPatientsVM>
 </ResourceDictionary> 
+    
