--- a/QLPhongMachTuWPF/View/ModifyPatients.xaml
+++ b/QLPhongMachTuWPF/View/ModifyPatients.xaml
@@ -1,15 +1,15 @@
-<Window x:Class="QLPhongMachTuWPF.View.AddPatient"
+﻿<Window x:Class="QLPhongMachTuWPF.View.ModifyPatients"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        DataContext="{StaticResource AddPatientVM}"
-        Title="AddPatient" Height="600" Width="800"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:AddPatientVM}"
+       DataContext="{StaticResource ModifyPatientsVM}"
+        Title="ModifyPatients" Height="600" Width="800"
+                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ModifyPatientsVM}"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
-    
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -71,8 +71,8 @@
             </Grid.RowDefinitions>
 
             <!--Chu-->
-            <Grid Grid.Row="0" MouseDown="Border_MouseDown">
-               <Button x:Name="btnClose"
+            <Grid Grid.Row="0" >
+                <Button x:Name="btnClose"
          BorderBrush="#3693ff"
         Grid.Column="1" Panel.ZIndex="1"
            Width="30"
@@ -80,27 +80,28 @@
            VerticalAlignment="Top"
            HorizontalAlignment="Right"
            Margin="0 13 13 0"
-           Click="btnClose_Click"
+                        Click="btnClose_Click" 
+           
             BorderThickness="0">
-                <Button.Background >
-                    <ImageBrush ImageSource="/Images/image.png"
+                    <Button.Background >
+                        <ImageBrush ImageSource="/Images/image.png"
                         Stretch="Fill"
                         />
-                </Button.Background>
+                    </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="ADD PATIENT" Style="{StaticResource titleText}"/>
+                <TextBlock Text="MODIFY PATIENT" Style="{StaticResource titleText}"/>
             </Grid>
 
             <!--Input-->
 
             <Grid Grid.Row="1">
-                
+
                 <Border CornerRadius="0 0 10 0" Background="White"/>
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 100 0 0">
                     <!--name-->
                     <TextBox
-                        Text="{Binding TenBN}"
+                        Text="{Binding TenBN, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                          VerticalAlignment="Center"
                          materialDesign:HintAssist.Hint="Name"
                          Style="{StaticResource MaterialDesignOutlinedTextBox}"
@@ -108,7 +109,7 @@
 
                     <!--Phone-->
                     <TextBox
-                    Text="{Binding DienThoai}"
+                    Text="{Binding DienThoai, Mode=TwoWay}"
                     VerticalAlignment="Center"
                     materialDesign:HintAssist.Hint="Phone"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
@@ -119,18 +120,18 @@
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 200 0 0">
                     <!--Date of birth-->
-                    <ComboBox Text="{Binding Ngay}" IsEditable="True" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox IsEditable="True" Text="{Binding Ngay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbDay" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
                                FontSize="16"/>
 
-                    <ComboBox Text="{Binding Thang}" IsEditable="True" x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox IsEditable="True" Text="{Binding Thang, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbMonth" Width="60" Style="{StaticResource MaterialDesignOutlinedComboBox}"
           FontSize="16" Margin="10 0 0 0"/>
 
-                    <ComboBox Text="{Binding Nam}" IsEditable="True" x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox IsEditable="True" Text="{Binding Nam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbYear" Width="110" Style="{StaticResource MaterialDesignOutlinedComboBox}"
  FontSize="16" Margin="10 0 0 0"/>
 
                     <!--Address-->
                     <TextBox VerticalAlignment="Center"
-                             Text="{Binding DiaChi}"
+                             Text="{Binding DiaChi, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 materialDesign:HintAssist.Hint="Address"
                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
                                 Width="250" Margin="60 0 0 0" FontSize="16"/>
@@ -141,19 +142,19 @@
 
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 300 0 0">
-                    <ComboBox Text="{Binding Gender}" IsEditable="True" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox IsEditable="True" Text="{Binding Gender, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
            FontSize="16"/>
-                    <ComboBox Text="{Binding Charged}" IsEditable="True" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox IsEditable="True" Text="{Binding Charged, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="cmbType" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
 
  FontSize="16" Margin="60 0 0 0"/>
                 </StackPanel>
-                
+
 
 
                 <Button
-                    Command="{Binding AddPatientCommand }"
-                    Content="Add patient"  Style="{StaticResource btnAdd}">
+                    Command="{Binding SaveChangesCommand}"
+                    Content="SaveChanges"  Style="{StaticResource btnAdd}">
 
                 </Button>
 
