--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -8,12 +8,13 @@
              d:DesignHeight="720" d:DesignWidth="880"
              xmlns:vm="clr-namespace:QLPhongMachTuWPF.ViewModel"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+             
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=vm:PatientsVM}"
              DataContext="{StaticResource PatientsVM}"
              Style="{StaticResource Page_Style}">
-    
 
-    
+
+
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </UserControl.Resources>
@@ -22,34 +23,36 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="247*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35">
+
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100,30,0,35">
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
        Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
             <TextBox x:Name="txtSearch"
                      Text ="{Binding SearchKeyword, UpdateSourceTrigger=PropertyChanged}"
                      Style="{StaticResource txtBoxSearch}">
-                
-                
-                
+
+
+
             </TextBox>
 
-                <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
+            <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10" Command="{ Binding AddPatientCommand }"  Style="{StaticResource addBtn}">
+        <Button Grid.Row="0" Margin="534,33,0,33" Command="{ Binding AddPatientCommand }"  Style="{StaticResource addBtn}" HorizontalAlignment="Left" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Patient" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
         </Button>
 
-        <DataGrid Grid.Row="1" Background="#eeeeee" ItemsSource="{Binding FilteredPatients}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="patientsDatagrid" Margin="0,0,0,10"
-              HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
-                  HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+        <DataGrid Grid.Row="1" Background="#eeeeee"
+                  SelectedItem="{Binding SelectedItemCommand, UpdateSourceTrigger=PropertyChanged}"
+                  ItemsSource="{Binding FilteredPatients}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="patientsDatagrid" Margin="0,0,0,10"
+              HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="3"
                   Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Patient ID" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding MaBN}" />
@@ -58,7 +61,7 @@
                 <DataGridTextColumn Header="Address" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding DiaChi}"/>
                 <DataGridTextColumn Header="Phone" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding DienThoai}"/>
                 <DataGridTextColumn Header="Gender" ElementStyle="{StaticResource textBlockDatagrid}" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding GioiTinh}"/>
-        
+
 
                 <DataGridTemplateColumn Header="Type" IsReadOnly="True" Width="0.8*">
                     <DataGridTemplateColumn.CellTemplate>
@@ -85,10 +88,13 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource gridEditBtn}">
+                                <Button  Command="{Binding Mo}" Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
                                     <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20"/>
+
                                 </Button>
-                                <Button Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
+                                <Button
+                                    Command="{Binding DeletePatientCommand}"
+                                    Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
                                     <materialDesign:PackIcon Kind="Delete" Width="20" Height="20"/>
                                 </Button>
                             </StackPanel>
@@ -99,7 +105,12 @@
 
             </DataGrid.Columns>
         </DataGrid>
+        <Button Grid.Row="0" Margin="708,33,0,33" Command="{Binding ModifyPatientCommand}"  Style="{StaticResource addBtn}" HorizontalAlignment="Left" >
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Modify Patient" FontSize="15" FontWeight="Bold"/>
+            </StackPanel>
+        </Button>
+        <TextBox Text="{Binding name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
-       
     </Grid>
 </UserControl>
