--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -110,7 +110,7 @@
                 <TextBlock Text="Modify Patient" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
         </Button>
-        <TextBox Text="{Binding name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox Text="{Binding name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="10,81,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </UserControl>
