--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -11,7 +11,7 @@
             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=vm:StaffsVM}"
              Style="{StaticResource Page_Style}"
               >
-   
+
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
     </UserControl.Resources>
@@ -26,7 +26,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        
+
         <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35">
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
    Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
@@ -40,14 +40,14 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Command="{Binding AddStaffCommand}" Grid.Row="0" Margin="0 10 40 10"  Style="{StaticResource addBtn}" >
+        <Button Command="{Binding AddStaffCommand}" Grid.Row="0" Margin="455,33,0,33"  Style="{StaticResource addBtn}" HorizontalAlignment="Left" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Staff" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
         </Button>
 
 
-        <DataGrid Grid.Row="1" Background="#eeeeee" ItemsSource="{Binding FilteredStaffs}"  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="staffDatagrid" Margin="0,0,0,10"
+        <DataGrid Grid.Row="1" Background="#eeeeee" SelectedItem ="{Binding SelectedItemCommand}" ItemsSource="{Binding FilteredStaffs}"  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="staffDatagrid" Margin="0,0,0,10"
           HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
@@ -96,7 +96,12 @@
 
             </DataGrid.Columns>
         </DataGrid>
+        <Button Command="{Binding ModifyStaffsCommand }" Grid.Row="0" Margin="647,33,0,33"  Style="{StaticResource addBtn}" HorizontalAlignment="Left" >
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Modify Staff" FontSize="15" FontWeight="Bold"/>
+            </StackPanel>
+        </Button>
 
-        
+
     </Grid>
 </UserControl>
