--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -6,6 +6,7 @@
                     >
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
+    <viewmodel:HomepageVM x:Key="HomepageVM"></viewmodel:HomepageVM>
     <viewmodel:PatientsVM x:Key="PatientsVM" ></viewmodel:PatientsVM>
     <viewmodel:StaffsVM x:Key="StaffsVM" ></viewmodel:StaffsVM>
     <viewmodel:ListsVM x:Key="ListsVM" ></viewmodel:ListsVM>
