--- a/QLPhongMachTuWPF/View/Homepage.xaml
+++ b/QLPhongMachTuWPF/View/Homepage.xaml
@@ -6,8 +6,217 @@
              xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="880"
-             Style="{StaticResource Page_Style}">
-    <Grid Background="White">
-        <Image Source="/Images/background.jpg" Stretch="UniformToFill"/>
+            xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+
+
+    <Grid Background="#ebedf5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.3*"/>
+                <RowDefinition Height="0.6*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="1.5*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Dashboard" Style="{StaticResource titleTextBlocl}" Margin="10 0 0 0"/>
+                </StackPanel>
+
+                <ComboBox
+  Width="100"
+                    Height="40"
+ HorizontalAlignment="Right"
+                    Margin="0 0 20 0"
+  Style="{StaticResource MaterialDesignOutlinedComboBox}"
+        Foreground="Black" 
+                    Background="White"
+                    BorderThickness="0">
+                    <ComboBoxItem
+    Content="This week" />
+                    <ComboBoxItem
+    Content="This month" />
+                    <ComboBoxItem
+    Content="This year" />
+                </ComboBox>
+            </Grid>
+
+            <!--metrics-->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <!-- Left Panel -->
+                <StackPanel Grid.Column="0" Margin="0 0 0 0">
+                    <Border Background="#ffff" CornerRadius="10" Padding="10" Margin="20 " Height="70">
+                        <StackPanel Orientation="Horizontal">
+                            <Border Background="Red" CornerRadius="5" Width="40" Height="40">
+                                <materialDesign:PackIcon Kind="AccountGroup" Width="30" Height="30" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="Total staffs" Foreground="#c3c9cd" Margin="10 0 0 0" FontSize="14"/>
+
+                                <TextBlock Text="150" Foreground="Black" FontSize="24" FontWeight="Bold" Margin="10 -4 0 0"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="0 0 0 0">
+                    <Border Background="#ffff" CornerRadius="10" Padding="10" Margin="20" Height="70">
+                        <StackPanel Orientation="Horizontal">
+                            <Border Background="#0580fd" CornerRadius="5" Width="40" Height="40">
+                                <materialDesign:PackIcon Kind="Account" Width="30" Height="30" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="Total patients" Foreground="#c3c9cd" Margin="10 0 0 0" FontSize="14"/>
+
+                                <TextBlock Text="150" Foreground="Black" FontSize="24" FontWeight="Bold" Margin="10 -4 0 0"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+
+                <StackPanel Grid.Column="2" Margin="0,0,0,0" >
+                    <Border Background="#ffff" CornerRadius="10" Padding="10" Margin="20" Height="70">
+                        <StackPanel Orientation="Horizontal">
+                            <Border Background="#18beb4" CornerRadius="5" Width="40" Height="40">
+                                <materialDesign:PackIcon Kind="Money" Width="30" Height="30" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="Total income" Foreground="#c3c9cd" Margin="10 0 0 0" FontSize="14"/>
+
+                                <TextBlock Text="150$" Foreground="Black" FontSize="24" FontWeight="Bold" Margin="10 -4 0 0"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+            </Grid>
+
+
+            <!--Patient data-->
+
+
+            <Grid Grid.Row="3" Background="White">
+                
+                <TextBlock Text="Last patient data" Style="{StaticResource textblock}" Grid.Row="3" VerticalAlignment="Top" Margin="10"/>
+
+            </Grid>
+
+                        <DataGrid x:Name="Patientdatagrid" Grid.Row="3" Margin="0 50 0 0"
+         ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle3}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" 
+         HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
+    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+    Width="auto" Height="auto" VerticalScrollBarVisibility="Auto" >
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="#" Binding="{Binding ID}" Width="0.5*" />
+                                <DataGridTextColumn Header="Date In" Binding="{Binding DateIn}" Width="*" />
+                                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*" />
+                                <DataGridTextColumn Header="DOB" Binding="{Binding DOB}" Width="*" />
+                                <DataGridTextColumn Header="Gender" Binding="{Binding Gender}" Width="*" />
+                                
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    
+               
+
+
+            
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0"
+ >
+
+                <Grid.Resources>
+                    <Style
+      x:Key="CustomCalendarDayButton"
+      TargetType="CalendarDayButton"
+      BasedOn="{StaticResource MaterialDesignCalendarDayButton}"
+     >
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionColor"
+        Value="#1ca7ec" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionForegroundColor"
+        Value="Black" />
+                    </Style>
+                    <Style
+      x:Key="CustomCalendarButton"
+      TargetType="CalendarButton"
+      BasedOn="{StaticResource MaterialDesignCalendarButton}"
+     >
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionColor"
+        Value="#1ca7ec" />
+                        <Setter
+        Property="materialDesign:CalendarAssist.SelectionForegroundColor"
+        Value="Black" />
+                    </Style>
+                </Grid.Resources>
+
+
+                <Calendar Margin="5"
+            materialDesign:CalendarAssist.HeaderBackground="White"
+            materialDesign:CalendarAssist.HeaderForeground="Black"
+            Background="White"
+            CalendarButtonStyle="{StaticResource CustomCalendarButton}"
+            CalendarDayButtonStyle="{StaticResource CustomCalendarDayButton}"
+            Foreground="Black"
+            FontWeight="Bold" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="auto" Height="auto">
+                </Calendar>
+
+
+            </Grid>
+
+
+            <!--Appointment-->
+            <Grid Grid.Row="1">
+                <Border CornerRadius="10" Background="White" Margin="5" Padding="10">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="Appointment" FontSize="18" FontWeight="Bold" Foreground="Black" Margin="0 0 0 10"/>
+
+                        <!-- Appointment List -->
+                        <ItemsControl>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Background="#f0f4f8" CornerRadius="5" Margin="0 5 0 5" Padding="10">
+                                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                            <materialDesign:PackIcon Kind="Clock" Width="20" Height="20" Foreground="#1ca7ec" Margin="0 0 10 0"/>
+                                            <StackPanel>
+                                                <TextBlock Text="{Binding Time}" FontSize="16" FontWeight="Bold"/>
+                                                <TextBlock Text="{Binding PatientName}" FontSize="14" Foreground="Gray"/>
+                                            </StackPanel>
+
+                                        </StackPanel>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemsSource>
+                                <!-- Dummy Data -->
+                                <x:Array Type="{x:Type local:Appointment}">
+                                    <local:Appointment Time="09:00 AM" PatientName="John Doe"/>
+                                    <local:Appointment Time="10:30 AM" PatientName="Jane Smith"/>
+                                    <local:Appointment Time="02:00 PM" PatientName="Alice Johnson"/>
+                                </x:Array>
+                            </ItemsControl.ItemsSource>
+                        </ItemsControl>
+                    </StackPanel>
+                </Border>
+            </Grid>
+
+        </Grid>
     </Grid>
 </UserControl>
