--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -8,8 +8,7 @@
              d:DesignHeight="720" d:DesignWidth="880"
               xmlns:vm="clr-namespace:QLPhongMachTuWPF.ViewModel"
              DataContext="{StaticResource InvoiceVM}"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=vm:InvoiceVM}"
-             Style="{StaticResource Page_Style}">
+                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=vm:InvoiceVM}">
    
 
     <UserControl.Resources>
@@ -35,7 +34,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Margin="0 10 40 10" Command="{Binding AddInvoiceCommand}"  Style="{StaticResource addBtn}">
+        <Button Grid.Row="0"  HorizontalAlignment="Left" Command="{Binding AddInvoiceCommand}"  Style="{StaticResource addBtn}">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Invoice" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
@@ -78,23 +77,14 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Action" IsReadOnly="True" CanUserResize="False" Width="100">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource gridEditBtn}">
-                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20"/>
-                                </Button>
-                                <Button Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
-                                    <materialDesign:PackIcon Kind="Delete" Width="20" Height="20"/>
-                                </Button>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                
 
             </DataGrid.Columns>
         </DataGrid>
-
+        <Button   Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Modify invoice" FontSize="15" FontWeight="Bold"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </UserControl>
