--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -7,8 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="880"
               xmlns:vm="clr-namespace:QLPhongMachTuWPF.ViewModel"
- xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             Style="{StaticResource Page_Style}">
+ xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <UserControl.DataContext>
         <vm:ManageAppointmentsVM/>
@@ -37,7 +36,7 @@
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
-        <Button Grid.Row="0" Command="{Binding AddAppointmentCommand}" Margin="0 10 40 10"  Style="{StaticResource addBtn}" >
+        <Button Grid.Row="0" Command="{Binding AddAppointmentCommand}"  Style="{StaticResource addBtn}" >
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Appointment" FontSize="15" FontWeight="Bold"/>
             </StackPanel>
@@ -55,24 +54,15 @@
                 <DataGridTextColumn Header="Phone" IsReadOnly="True" CanUserResize="False" Width="*" Binding="{Binding PatientPhone}"/>
                 <DataGridTextColumn Header="Gender" IsReadOnly="True" CanUserResize="False" Width="0.8*" Binding="{Binding Gender}"/>
 
-                <DataGridTemplateColumn Header="Action" IsReadOnly="True" CanUserResize="False" Width="100">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource gridEditBtn}">
-                                    <materialDesign:PackIcon Kind="Pencil" Width="20" Height="20"/>
-                                </Button>
-                                <Button Style="{StaticResource gridRemoveBtn}" Margin="5 0 0 0" >
-                                    <materialDesign:PackIcon Kind="Delete" Width="20" Height="20"/>
-                                </Button>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                
 
             </DataGrid.Columns>
         </DataGrid>
 
-        
+        <Button  Command="{Binding ModifyMedicineCommand}" Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Modify Appointment" FontSize="15" FontWeight="Bold"/>
+            </StackPanel>
+        </Button>
     </Grid>
 </UserControl>
