--- a/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDiagnosis.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="QLPhongMachTuWPF.View.AddMedicineDiagnosis"
+﻿<Window x:Class="QLPhongMachTuWPF.View.ModifyDiagnosis"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QLPhongMachTuWPF.View"
         mc:Ignorable="d"
-        Title="AddMedicineDiagnosis" Height="600" Width="800"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="ModifyDiagnosis" Height="600" Width="800"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
-
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -91,7 +90,7 @@ Grid.Column="1" Panel.ZIndex="1"
                     </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="ADD DIAGNOSIS" Style="{StaticResource titleText}"/>
+                <TextBlock Text="MODIFY DIAGNOSIS" Style="{StaticResource titleText}"/>
             </Grid>
 
             <!--Input-->
@@ -164,7 +163,7 @@ VerticalScrollBarVisibility="Auto"
 
 
 
-                <Button Content="Add Diagnosis"  Style="{StaticResource btnAdd}">
+                <Button Content="Save changes"  Style="{StaticResource btnAdd}">
 
                 </Button>
 
